# A-paranormal-mind

./: .gitignore  CMakeLists.txt  main.cpp
include/: Game.hpp  Player.hpp
src/: Game.cpp  Player.cpp
